# team_nanyang

./: README.md
calibration/: CMakeLists.txt  package.xml
calibration/cmake/: configure_os.cmake
calibration/include/: calibration.h
calibration/output/: calib_result.yml  read_result.py
calibration/params/: param_calibration.yml
calibration/src/: calibration.cpp  calibration_node.cpp
capture/: CMakeLists.txt
capture/capture_kinect/: CMakeLists.txt  package.xml
capture/capture_kinect/include/: RGBD_Capture.h  VirtualKinect.h
capture/capture_kinect/params/: param_capture.yml
capture/capture_kinect/params/bin_A/: param.yml
capture/capture_kinect/params/bin_B/: param.yml
capture/capture_kinect/params/bin_C/: param.yml
capture/capture_kinect/params/bin_D/: param.yml
capture/capture_kinect/params/bin_E/: param.yml
capture/capture_kinect/params/bin_F/: param.yml
capture/capture_kinect/params/bin_J/: param.yml
capture/capture_kinect/src/: RGBD_Capture.cpp  VirtualKinect.cpp  captureProcess.cpp  capture_id.cpp  capture_node.cpp  capture_test.cpp
capture/capture_kinect/srv/: SRV_Capture.srv
grasping/mantis/: CMakeLists.txt  package.xml
grasping/mantis/action/: Gripper.action
grasping/mantis/action/action/: action_client.py  action_server.py
grasping/mantis/launch/: action.launch  main.launch  try.launch
grasping/mantis/src/: .rotmat.py  action_client.py  grasp_brain.py  item_library_new.py  lib_robotis.py  runmantis.py  runmantis.py~  servo_config.py  srv_client.py  transformation.py
grasping/mantis/srv/: SRV_Gripper.srv  SRV_Gripper.srv~
identification/: .gitignore  CMakeLists.txt  README.md  package.xml
identification/cmake/: configure_os.cmake  find_opencv.cmake  find_pcl.cmake  link_opencv_dlls.cmake  link_openni_dlls.cmake  link_pcl_dlls.cmake
identification/include/: identification.h  tools.h
identification/output/: .gitignore
identification/params/: .gitignore  example.json  identification_pp_matrix.csv  identification_pp_matrix_labeled.csv  identity_confidence_pts_0.txt  identity_confidence_pts_1.txt  identity_confidence_pts_2.txt  identity_confidence_pts_3.txt  view_ratio_pts_0.txt  view_ratio_pts_1.txt  view_ratio_pts_2.txt  view_ratio_pts_3.txt
identification/scripts/: identification_test.launch  json_probabilities_calc.py  oversample.mlx  oversample_mesh.bat  ros_testing_client.py
identification/scripts/matlab/: apcMaskMake.m  berkeleyDataRead.m  convertAllMasks.m  create_indexed_mask.m  generateMatrixPermutations.m  generatePermutations.m  h5CalibRead.m  h5DepthRead.m  h5PoseRead.m  learnIdentityConfidence.m  learnViewConfidence.m  lsq_lut_piecewise.m  makePermutationsUnique.m  moveAllRGBIms.m  pbmTopng.m  probability_exploration.m  reindexTestData.m
identification/scripts/matlab/calibrationFileObjects/: notes.txt
identification/scripts/rll-berkeley-data/: downloader-python3.py  downloader.py
identification/src/: depth_from_object.cpp  identification.cpp  identification_example.cpp  identification_library_create.cpp  identification_library_test.cpp  identification_node.cpp  tools.cpp
identification/srv/: SRV_Identification.srv
identification/test_data/: .gitignore
identification/yml_library/: .gitignore
program_manager/: CMakeLists.txt  output (copy).yaml  output.yaml  output_UR_10.yaml  output_lobster.yaml  output_mantis.yaml  output_mantis.yaml~  package.xml  setup.py  y_axis_rotation.yaml
program_manager/launch/: APC_Motion_Module.launch  kj_pick_and_place_demo.launch
program_manager/src/: connection_interface.py  listener.py  motion_module.py  program_manager_node.py  program_manager_node.py~  send_point.py  talker.py  testing_service_client.py
program_manager/srv/: CallRobotToBin.srv  SRV_Motion.srv
registration/: .gitignore  CMakeLists.txt  package.xml
registration/include/: registration.h
registration/lib3d/: file_list.txt  model_match_method.yml  model_size.yml  model_unit_is_mm.yml
registration/params/: param_matching.yml  param_test.yml
registration/src/: registration.cpp  registration_create_lib2d.cpp  registration_node.cpp  registration_test.cpp
registration/srv/: SRV_Registration.srv
