<?xml version="1.0"?>
<package>
	<name>identification</name>
	<version>0.0.0</version>
	<description>The Team NTU Amazon Picking Challenge 2015 identification package</description>

	<maintainer email="stephen.vidas@gmail.com">steevo87</maintainer>

	<!-- One license tag required, multiple allowed, one license per tag -->
	<!-- Commonly used license strings: -->
	<!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
	<license>TODO</license>

	<author email="stephen.vidas@gmail.com">Stephen Vidas</author> -->

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>message_generation</build_depend> 

	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>message_runtime</run_depend> 
	
	<!-- The export tag contains other, unspecified, tags -->
	<export>
	<!-- Other tools can request additional information be placed here -->
	</export>
</package>
